# LegalOS

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  BACKLOG.md  IMPLEMENTATION_STATUS.md  Makefile  README.md  WindowsSetup.md  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: ci.yml
apps/api/: README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260324_0001_initial_schema.py  20260324_0002_bundle_intelligence.py  20260324_0003_workflows.py  20260407_0004_court_intelligence.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/: deps.py  router.py
apps/api/app/api/routes/: __init__.py  auth.py  bundle.py  court_intelligence.py  documents.py  drafting.py  health.py  institutional.py  matters.py  research.py  strategy.py
apps/api/app/core/: config.py  rate_limit.py  security.py
apps/api/app/db/: base.py  models.py  seed.py  session.py  types.py
apps/api/app/domain/: __init__.py  audit.py  bundle.py  court_intelligence.py  document.py  drafting.py  enums.py  institutional.py  jobs.py  matter.py  organization.py  research.py  user.py
apps/api/app/integrations/indian_courts/: __init__.py  base.py  district_ecourts.py  ecourts_judgments.py  high_court_services.py  models.py  njdg.py  supreme_court_india.py
apps/api/app/repositories/: __init__.py  audit.py  bundle.py  court_intelligence.py  documents.py  drafting.py  institutional.py  jobs.py  matters.py  research.py  users.py
apps/api/app/schemas/: auth.py  bundle.py  court_intelligence.py  document.py  drafting.py  institutional.py  matter.py  research.py  strategy.py
apps/api/app/services/: __init__.py  auth.py  bundle_analysis.py  court_intelligence.py  drafting.py  extraction.py  ingestion.py  institutional.py  intelligence_agents.py  job_system.py  model_adapters.py  quote_lock.py  research.py  seed.py  storage.py  strategy.py
apps/web/: next.config.mjs  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/worker-ai/: README.md
apps/worker-ingest/: README.md
docs/adr/: 0001-architecture.md  0002-public-data-ingestion-strategy.md  0003-bounded-intelligence-orchestration.md  0004-litigant-memory-design.md  0005-profile-guardrails.md  0006-hybrid-retrieval-architecture.md
docs/evals/: chronology-fidelity.md  citation-integrity.md  draft-completeness.md  institutional-auditability.md  low-bandwidth-brief.md  memory-grounding.md  missing-record-detection.md  plain-language-summary.md  profile-safety.md  quote-span-integrity.md  retrieval-relevance.md  sequencing-console-safety.md  source-attribution-integrity.md  strategy-boundedness.md  style-pack-fidelity.md
docs/product/: overview.md
(+70 files in other folders)
