[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "legalos"
version = "0.0.0"
description = "Indian litigation operating system"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"apps/api/alembic/versions/*.py" = ["E501"]
"apps/api/app/db/base.py" = ["N805"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_unused_ignores = true
show_error_codes = true
strict = false

[[tool.mypy.overrides]]
module = ["passlib", "passlib.*", "pytesseract", "pytesseract.*"]
ignore_missing_imports = true
