[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "legalos-api"
version = "0.1.0"
description = "FastAPI backend for the Indian Litigation Operating System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiosqlite>=0.20.0",
  "alembic>=1.14.0",
  "asyncpg>=0.30.0",
  "beautifulsoup4>=4.12.3",
  "email-validator>=2.2.0",
  "fastapi>=0.115.6",
  "greenlet>=3.1.1",
  "httpx>=0.28.1",
  "passlib[bcrypt]>=1.7.4",
  "pillow>=11.0.0",
  "pydantic-settings>=2.7.1",
  "pydantic>=2.10.4",
  "pypdf>=5.1.0",
  "pyjwt>=2.10.1",
  "python-docx>=1.1.2",
  "python-multipart>=0.0.20",
  "pytesseract>=0.3.13",
  "sqlalchemy>=2.0.36",
  "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.14.1",
  "pytest-asyncio>=0.25.0",
  "pytest>=8.3.4",
  "ruff>=0.8.6",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["../../tests/integration"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "ASYNC"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["E501"]
"app/db/base.py" = ["N805"]
"app/domain/court_intelligence.py" = ["E501"]
"app/integrations/indian_courts/*.py" = ["E501"]
"app/repositories/court_intelligence.py" = ["E501"]
"app/services/court_intelligence.py" = ["E501"]
"app/services/intelligence_agents.py" = ["E501"]
"../../tests/integration/test_court_intelligence_flow.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
plugins = []

[[tool.mypy.overrides]]
module = ["passlib", "passlib.*", "pytesseract", "pytesseract.*"]
ignore_missing_imports = true
